--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services: 
   django:
     build: .
+    image: vilelf/minimal-django-app
     ports: 
-      - "8000:8000"
-    command: gunicorn minimal_django.wsgi:application -w 2 -b :8000
+      - "3000:3000"
+    command: gunicorn minimal_django.wsgi:application -w 2 -b :3000
